Edit default devise views

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,52 @@
-<h2>Sign up</h2>
+<h2 class="heading--sm text-center">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "email" %>
+  <div class="input mb-16">
+    <%= f.label :email, class:"content--xs overline" %>
+    <div class="input__container">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input__content" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "email" %>
+  <div class="input mb-16">
+    <%= f.label :username, class:"content--xs overline" %>
+    <div class="input__container">
+      <%= f.text_field :username, class: "input__content" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="input mb-16">
+    <%= f.label :name, class:"content--xs overline" %>
+    <div class="input__container">
+      <%= f.text_field :name, class: "input__content" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="input mb-16">
+    <%= f.label :avatar, class:"content--xs overline" %>
+    <%= f.file_field :avatar %>
+  </div>
+
+  <div class="input mb-16">
+    <%= f.label :password, class:"content--xs overline" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <% end %>
+    <div class="input__container">
+      <%= f.password_field :password, autocomplete: "new-password", class: "input__content" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="input mb-16">
+    <%= f.label :password_confirmation, class:"content--xs overline" %>
+    <div class="input__container">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input__content" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <%= f.submit "Sign up", class: "btn btn--primary" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= link_to "Log in", new_session_path(resource_name), class: "primary-500 text-center" %>
